--- a/Emveep.TalentHunter.API.csproj
+++ b/Emveep.TalentHunter.API.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1"/>
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.7"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7"/>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0"/> <!-- to encrypt use: https://github.com/neoKushan/BCrypt.Net-Core -->
   </ItemGroup>
 </Project>
